# skills-lint

./: AGENTS.md  Cargo.toml  README.md  action.yml  dist-workspace.toml
.github/workflows/: release.yml
src/: lib.rs  main.rs
