[package]
name = "skills-lint"
version = "0.1.0"
edition = "2024"
description = "Rust CLI for linting Agent Skills in monorepos"
repository = "https://github.com/ArcoCodes/skills-lint"
license = "MIT"

[[bin]]
name = "slint"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
toml = "1.1.2"
walkdir = "2.5.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
